--- a/htmlquiz1.css
+++ b/htmlquiz1.css
@@ -1,6 +1,6 @@
 <style>
 body {
-        background-image: url("images3/keyboard.png");
+        background-image: url("keyboard.png");
 } 
  
 </style>
