--- a/htmlquiz1.css
+++ b/htmlquiz1.css
@@ -1,7 +1,6 @@
-<style>
+d
 body {
-        background-image: url("keyboard.png");
+        background-image: url("images3/keyboard.png");
 } 
  
-</style>
 
